--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,12 @@
-Flask==2.0.1
-Flask-Cors==3.0.10
-Werkzeug==2.0.2
-pytest==6.2.5
+aniso8601==10.0.1
+blinker==1.9.0
+click==8.1.8
+Flask==3.1.0
+flask-cors==5.0.1
+Flask-RESTful==0.3.10
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.2
+pytz==2025.2
+six==1.17.0
+Werkzeug==3.1.3
